# discogs-scraper

./: .coverage  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini
rock_genre/: constants.py  discogs_data.jsonl  helpers.py  pipeline_runner.py  scraper.py
tests.py/: test_helpers.py  test_scraper.py
