[project]
name = "discogs-scraper"
version = "0.1.0"
description = "Scraper from Discogs.com"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Dandara Leite", email = "dandaraleite2@gmail.com"},
]
dependencies = [
    "jsonlines>=4.0.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rock_genre"]

[tool.ruff.lint]
select = ["E", "F", "B", "C4", "Q", "SIM", "T", "S", "UP", "I"]
ignore = ["E501", "T201", "S101", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"cli.py" = ["T201"]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "SIM105", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true
packages = ["rock_genre"]
explicit_package_bases = true
